# geoflow

./: README.org  pyproject.toml
geoflow/: __init__.py  custom_types.py  gp.py  manifolds.py  plotting.py
geoflow/gp/: conditionals.py  covariances.py
tests/: test_gp_jacobian.py  test_manifolds.py
